# delta

./: .gitignore  .gitmodules  BATCH_SIZE_FIX.md  BUILD_AND_RUN.md  BUILD_FIX_SUMMARY.md  BUILD_GUIDE.md  CMakeLists.txt  CONTRIBUTING.md  DEBUG_MODEL_MANAGEMENT.md  DEFAULT_MODEL_FLOW.txt  FIX_HOMEBREW_INSTALL.md  FIX_MODEL_MANAGEMENT.md  FIX_PATH.md  FIX_TAP_NAME.md  FIX_WEBUI_PRIORITY.md  GENERATION_STATS_IMPLEMENTATION.md  HOMEBREW_TAP_SETUP.md  INSTALL.md  INSTALLATION_FEATURES_CHECKLIST.md  INSTALLATION_FINAL.md  INSTALLATION_GUIDE.md  INSTALLATION_SUMMARY.md  INSTALLATION_VERIFICATION.md  INSTALL_AND_RUN.md  INSTALL_FOR_USERS.md  INSTALL_HOMEBREW.md  INSTALL_LOCAL.md  INSTALL_NO_GIT.md  LLAMABARN_COMPARISON.md  LLAMA_3.2_1B_SWITCH_TEST.md  MODEL_SWITCHING_DEBUG.md  MODEL_SWITCH_TEST_RESULTS.md  PDF_PERFORMANCE_ANALYSIS.md  PERFORMANCE_FIX_SUMMARY.md  PROCESSING_UI_IMPROVEMENTS.md  QUICK_INSTALL.md  QUICK_INSTALL_REFERENCE.md  QUICK_START.md  README.md  REALTIME_STATS_SUMMARY.md  (+46 more)
.cache/clangd/index/: afmoe.cpp.D1609B33B3A5B13B.idx  amx.cpp.E3CE14CC0D1AD3AC.idx  amx.h.7FE9E75A45498B11.idx  apertus.cpp.E4727DCA53E91204.idx  arcee.cpp.92FAB73A668756A8.idx  arch-fallback.h.FF8E9F55BC91B727.idx  arctic.cpp.119790F4EB94ECDE.idx  arg.cpp.853F53981EB7B5B4.idx  arg.h.EEE6990C134A6A5A.idx  arwkv7.cpp.4D2B99B3C0FE3823.idx  auth.cpp.E3312A4920DE0E9A.idx  baichuan.cpp.EFBD7BB9CF6815F1.idx  bailingmoe.cpp.976D9661CAF4F4F7.idx  bailingmoe2.cpp.7BF17C258FA1EC20.idx  base64.hpp.35321AB101C64A78.idx  batched-bench.cpp.952ED3030FBD6695.idx  batched.cpp.59860FD1E1C87D73.idx  bert.cpp.4D50D89D6AC9A5E6.idx  binary-ops.cpp.339569C50503810D.idx  binary-ops.h.F001C986D01B7A58.idx  bitnet.cpp.38FC29994B40D663.idx  bloom.cpp.6DA8DA9B787481C8.idx  browser.cpp.8490F556652A202F.idx  caps.cpp.0D7C1EE3FE2490CA.idx  caps.h.BA2A98206E59F234.idx  chameleon.cpp.5748C3C94D924E81.idx  chat-parser-xml-toolcall.cpp.130521753569C514.idx  chat-parser-xml-toolcall.h.1B6AF0014A24E45C.idx  chat-parser.cpp.8C9E16A84597492C.idx  chat-parser.h.CA4DF583A57C346E.idx  chat-peg-parser.cpp.526567A14DF148C2.idx  chat-peg-parser.h.6CF002368EB5E6B7.idx  chat.cpp.3C8EB41B299029E5.idx  chat.h.717DBE5E9497B81F.idx  chatglm.cpp.0D6C89C3858065AF.idx  cli.cpp.FA0F982DC1B94D65.idx  clip-graph.h.6138DC834FC11D04.idx  clip-impl.h.D3085A23B4CE0D0F.idx  clip-model.h.0C3160A59116EE86.idx  clip.cpp.4AECF21D8EDE474B.idx  (+373 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy-site.yml  release.yml
assets/: BUILD_NOTES.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
assets/.svelte-kit/: ambient.d.ts  non-ambient.d.ts  tsconfig.json
assets/.svelte-kit/types/: route_meta_data.json
assets/scripts/: dev.sh  post-build.sh
assets/src/: app.html
assets/src/routes/: +layout.svelte  +page.svelte
assets/src/stories/: Introduction.mdx  MarkdownContent.stories.svelte
assets/src/styles/: katex-custom.scss
dashboard/: package.json  server.js
dashboard/public/: app.js  index.html  style.css
docs/: MODEL_MANAGEMENT_COLOR_PALETTE.md  building.md
engine/: auth.cpp  commands.cpp  commands.h  delta_cli.h  delta_server_wrapper.cpp  history.cpp  history.h  inference.cpp  main.cpp  model_api_server.cpp  model_api_server.h  update.cpp  update.h
engine/tools/: browser.cpp  dep_protocol.cpp  file_ops.cpp  shell.cpp
installers/: COMPATIBILITY_FIX.md  DMG_GUIDE.md  MULTI_ARCH_BUILD.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  UBUNTU_INSTALLATION.md  VISIONOS_FIX.md  auto_install.command  build_all_architectures.sh  build_linux.sh  build_macos.sh  calculate-sha256.ps1  check_app.sh  create-winget-zip.ps1  create_dmg.sh  install_delta.sh  manual_dmg_convert.sh  package_all_architectures.sh  package_linux_deb.sh  package_macos.sh  package_windows.bat  package_windows.sh  trust_app.sh
packaging/: EXAMPLES.md  HOW_TO_USE.md  INSTALLATION.md  INSTALL_SIMPLE.md  QUICK_START.md  README.md  START_HERE.md  TROUBLESHOOTING.md  USER_VS_DEVELOPER.md  uninstall.sh
packaging/homebrew/: README.md  delta-cli.rb
packaging/linux/: install-deb.sh  install-rpm.sh
packaging/macports/: Portfile
packaging/nix/: default.nix
packaging/windows/: install.ps1  uninstall.ps1
packaging/winget/: AUTOMATION.md  MACOS_GUIDE.md  QUICK_START.md  README.md  SUBMISSION_CHECKLIST.md  SUBMIT.md  delta-cli.yaml  submit-to-winget.ps1  submit-to-winget.sh  update-sha256.ps1
public/: index.html
public/_app/: version.json
public/_app/immutable/: bundle.1bE9LqGO.js  bundle.9wPlix-b.js  bundle.B7YbUB8u.js  bundle.BDSGhGtH.js  bundle.BFYGQjOY.js  bundle.BKReTDdW.js  bundle.BNysoC3w.js  bundle.BT65saIC.js  bundle.BUA4EvRp.js  bundle.BUWGdbWk.js  bundle.BbuUMSkc.js  bundle.BgASndfE.js  bundle.BgDIL_eX.js  bundle.BiIM7vJL.js  bundle.BmTIbtQ7.js  bundle.BrXOw6TO.js  bundle.Bspl8hCA.js  bundle.C5AERZ0C.js  bundle.C77ZTD2i.js  bundle.CF_Hc3-a.js  bundle.CGJMxL6f.js  bundle.CI6cUvZh.js  bundle.CLHqjtUc.js  bundle.CMIg6IIc.js  bundle.CQVVlxIm.js  (+35 more)
python/: README.md  delta_cli.py  setup.py
scripts/: build-sidecars.sh  build-webui-and-install.sh  bump-version.sh
site/src/: app.html
src/: auth.cpp  commands.cpp  commands.cpp.bak  commands.h  delta_cli.h  delta_server_wrapper.cpp  delta_server_wrapper.cpp.bak  history.cpp  inference.cpp  main.cpp  model_api_server.cpp  model_api_server.h  models.cpp  ui.cpp
src-tauri/: Cargo.toml  installer-hooks.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/tools/: browser.cpp  dep_protocol.cpp  file_ops.cpp
src/web/: server.cpp
tests/: CMakeLists.txt  test_auth.cpp  test_default_flow.cpp  test_default_session.cpp  test_default_session_enforcement.cpp  test_inference.cpp  test_interactive_commands.cpp  test_main.cpp  test_models.cpp  test_tools.cpp  test_ui.cpp
web/app/: index.html  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
web/site/: package.json  pnpm-lock.yaml  svelte.config.js
(+138 files in other folders)
