[package]
name = "delta-app"
version = "1.0.0"
description = "Delta - Offline AI Assistant"
authors = ["Nile AGI"]
edition = "2021"

[lib]
name = "delta_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
